Voyager 1 is 23846483236.233 kilometers away from the Sun.

--- a/Dev/Program/MkDecision0002/Claes20200001/Claes20200001/Claes20200001.csproj
+++ b/Dev/Program/MkDecision0002/Claes20200001/Claes20200001/Claes20200001.csproj
@@ -55,6 +55,9 @@
     <Compile Include="Commons\WorkingDir.cs" />
     <Compile Include="Consts.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="Utilities\CsvFileReader.cs" />
+    <Compile Include="Utilities\CsvFileWriter.cs" />
+    <Compile Include="Utilities\JsonNode.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\Test0001.cs" />
