--- a/Dev/Program/MkDecision0003/Claes20200001/Claes20200001/Claes20200001.csproj
+++ b/Dev/Program/MkDecision0003/Claes20200001/Claes20200001/Claes20200001.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Commons\WorkingDir.cs" />
     <Compile Include="Consts.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="Utilities\CsvFileWriter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\Test0001.cs" />
