Voyager 1 is 23863163907.104 kilometers away from the Sun.

--- a/Dev/Game/00_Game/Silvia20200001/Silvia20200001/Silvia20200001.csproj
+++ b/Dev/Game/00_Game/Silvia20200001/Silvia20200001/Silvia20200001.csproj
@@ -73,7 +73,7 @@
       <DependentUpon>MainWin.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
-    <Compile Include="Program2.cs" />
+    <Compile Include="UserGameMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="MainWin.resx">
       <DependentUpon>MainWin.cs</DependentUpon>
