--- a/Dev/Game/00_Game/Silvia20200001/Silvia20200001/Silvia20200001.csproj
+++ b/Dev/Game/00_Game/Silvia20200001/Silvia20200001/Silvia20200001.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="GameCommons\DD.cs" />
     <Compile Include="GameCommons\GameProcMain.cs" />
+    <Compile Include="GameCommons\ClusterFile.cs" />
     <Compile Include="Ground.cs" />
     <Compile Include="GUICommons\GUIProcMain.cs" />
     <Compile Include="MainWin.cs">
